temp frontend testing

--- a/React-Frontend/src/App.css
+++ b/React-Frontend/src/App.css
@@ -11,9 +11,15 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
+.main-div {
+  background-color: rgb(48, 48, 48);
+}
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +28,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
