--- a/React-Frontend/src/index.css
+++ b/React-Frontend/src/index.css
@@ -8,7 +8,7 @@ body {
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #000000;
+    background-color: #0f0f11;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
