--- a/React-Frontend/src/index.css
+++ b/React-Frontend/src/index.css
@@ -1,17 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Lexend:wght@100..900&display=swap');
 @import "tailwindcss";
 
-body {
-    font-family: "Lexend", serif;
-    line-height: 1.5;
-    font-weight: 400;
-
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #0f0f11;
-
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+* {
+    font-family: 'Lexend Deca', sans-serif;
 }
