--- a/React-Frontend/src/styles/GameStoreAdmin.css
+++ b/React-Frontend/src/styles/GameStoreAdmin.css
@@ -81,6 +81,16 @@
   margin: 8px;
 }
 
+.modal-container {
+  border-radius: 5px;
+  background-color: rgba(57, 39, 61, 0.99);
+  padding: 10px;
+}
+
+.backdrop-blur-custom {
+  backdrop-filter: blur(1px);
+}
+
 @keyframes l16 {
   100% {
     transform: rotate(1turn)
