feat(auth): logout functionality and token verification with auto sign in on page reload (using jwt token)

--- a/React-Frontend/src/index.css
+++ b/React-Frontend/src/index.css
@@ -1,3 +1,9 @@
 * {
-  font-family: 'Lexend Deca', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
+
+@custom-variant dark (&:is(.dark *));
+
+/* {
+  font-family: 'Lexend Deca', sans-serif;
+} */
