--- a/React-Frontend/src/styles/GameStoreAdmin.css
+++ b/React-Frontend/src/styles/GameStoreAdmin.css
@@ -46,39 +46,27 @@
   background-color: rgb(255, 255, 255);
 }
 
-.loader-container {
-  justify-content: center;
-  align-items: center;
-}
+
 
 .loader {
-  width: 50px;
-  aspect-ratio: 1;
-  display: grid;
-  border: 4px solid #0000;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
-  border-color: #ccc #0000;
-  animation: l16 1s infinite linear;
+  display: inline-block;
+  border-top: 3px solid #FFF;
+  border-right: 3px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
 
-.loader::before,
-.loader::after {
-  content: "";
-  grid-area: 1/1;
-  margin: 2px;
-  border: inherit;
-  border-radius: 50%;
-}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
 
-.loader::before {
-  border-color: #35298b #0000;
-  animation: inherit;
-  animation-duration: .5s;
-  animation-direction: reverse;
-}
-
-.loader::after {
-  margin: 8px;
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .modal-container {
