--- a/React-Frontend/src/styles/Global.css
+++ b/React-Frontend/src/styles/Global.css
@@ -18,6 +18,7 @@
         --color-muted: hsl(240 4.8% 90%);
         --color-muted-foreground: hsl(240 3.8% 46.1%);
         --color-accent: hsl(240 4.8% 95.9%);
+        --color-accent-alt: hsl(191 29% 25%);
         --color-accent-foreground: hsl(240 5.9% 10%);
         --color-destructive: hsl(0 84.2% 60.2%);
         --color-destructive-foreground: hsl(0 0% 98%);
@@ -47,7 +48,8 @@
         --color-secondary-background: hsl(0 0% 100%);
         --color-muted: hsl(210 33% 16%);
         --color-muted-foreground: hsl(240 5% 64.9%);
-        --color-accent: hsl(240 3.7% 15.9%);
+        --color-accent: hsl(225 40% 22%);
+        --color-accent-alt: hsl(191 29% 25%);
         --color-accent-foreground: hsl(0 0% 98%);
         --color-destructive: hsl(0 62.8% 30.6%);
         --color-destructive-foreground: hsl(0 0% 98%);
