--- a/React-Frontend/src/styles/gv-global.css
+++ b/React-Frontend/src/styles/gv-global.css
@@ -53,3 +53,51 @@
     mask-composite: exclude;
     pointer-events: none;
 }
+
+.loader-dots,
+.loader-dots:before,
+.loader-dots:after {
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    animation-fill-mode: both;
+    animation: bblFadInOut 1.8s infinite ease-in-out;
+}
+
+.loader-dots {
+    color: #FFF;
+    font-size: 3px;
+    position: relative;
+    text-indent: -9999em;
+    transform: translateZ(0);
+    animation-delay: -0.16s;
+}
+
+.loader-dots:before,
+.loader-dots:after {
+    content: '';
+    position: absolute;
+    top: 0;
+}
+
+.loader-dots:before {
+    left: -3.5em;
+    animation-delay: -0.32s;
+}
+
+.loader-dots:after {
+    left: 3.5em;
+}
+
+@keyframes bblFadInOut {
+
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 2.5em 0 -1.3em
+    }
+
+    40% {
+        box-shadow: 0 2.5em 0 0
+    }
+}
