--- a/React-Frontend/src/styles/Global.css
+++ b/React-Frontend/src/styles/Global.css
@@ -61,5 +61,6 @@
         --card-foreground: 0 0% 98%;
         --popover: 240 10% 3.9%;
         --popover-foreground: 0 0% 98%;
+        --color-accent-primary: #18429C;
     }
 }
