--- a/React-Frontend/src/styles/Global.css
+++ b/React-Frontend/src/styles/Global.css
@@ -31,6 +31,7 @@
         --card-foreground: 0 0% 98%;
         --popover: 240 10% 3.9%;
         --popover-foreground: 0 0% 98%;
+        --color-accent-primary: #546885;
     }
 
     .dark {
@@ -61,6 +62,6 @@
         --card-foreground: 0 0% 98%;
         --popover: 240 10% 3.9%;
         --popover-foreground: 0 0% 98%;
-        --color-accent-primary: #18429C;
+        --color-accent-primary: #546885;
     }
 }
