feat(explore): popular games side bar + header redesigned

--- a/React-Frontend/src/styles/Global.css
+++ b/React-Frontend/src/styles/Global.css
@@ -32,6 +32,7 @@
         --popover: 240 10% 3.9%;
         --popover-foreground: 0 0% 98%;
         --color-accent-primary: #546885;
+        --color-accent-secondary: #33BCFA;
     }
 
     .dark {
@@ -63,5 +64,6 @@
         --popover: 240 10% 3.9%;
         --popover-foreground: 0 0% 98%;
         --color-accent-primary: #546885;
+        --color-accent-secondary: #33BCFA;
     }
 }
